Check validity of QToolButton cast before testing popupMode()

BUG: 265271